fix: menu screen overflow

--- a/client/src/styles/menu.css
+++ b/client/src/styles/menu.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 @media only screen and (min-width: 0px) {
   .menu-massaia {
     display: none;
@@ -16,15 +20,19 @@
     position: absolute;
     top: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
-    .menu-option {
+    .menu-main-option {
       font-size: 10vw;
       font-family: "AkzidGroReg";
+
+      .menu-option {
+        font-family: "AkzidGroLigOsF";
+      }
     }
   }
 }
@@ -47,8 +55,8 @@
   }
 
   .menu-options {
-    .menu-option {
-      font-size: 8vw;
+    .menu-main-option {
+      font-size: 7vw;
     }
   }
 }
@@ -68,9 +76,14 @@
 
   .menu-options {
     align-items: start;
-    margin-left: 4%;
-    .menu-option {
+    margin-left: 5%;
+
+    .menu-main-option {
       font-size: 2.8vw;
+      width: 20%;
+      .menu-option {
+        margin-left: 7%;
+      }
     }
   }
 }
